--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,11 @@ button:disabled {
   background-color: #ccc;
   cursor: not-allowed;
 }
+
+.label {
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  color: #333;
+  margin-bottom: 5px;
+}
